--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.1",
+    "mongoose": "^5.13.2",
     "node-gyp": "^8.0.0"
   },
   "devDependencies": {
@@ -23,6 +28,7 @@
     "gulp-ignore": "^3.0.0",
     "gulp-jslint": "^1.0.10",
     "gulp-load-plugins": "^2.0.6",
+    "gulp-nodemon": "^2.5.0",
     "gulp-nunjucks-render": "^2.2.3",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
