--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp",
+    "start": "node app.js",
     "dev": "nodemon app.js"
   },
   "author": "Milan Milić",
